<resources>
    <string name="app_name">GreenFlag</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo">logo</string>
    <string name="intro">Green Flag customers can create an account to access</string>
    <string name="car_health">Car health updates</string>
    <string name="request_rescue">Request a rescue online</string>
    <string name="poly_info">Policy Information</string>
    <string name="check_one">check one</string>
    <string name="check_two">check two</string>
    <string name="check_three">check three</string>
    <string name="green_btn">green btn</string>
    <string name="create_an_account">Create an account</string>
    <string name="pass_criteria">Your password should have a minimum of 8 characters and contain at least one number, one uppercase and one lowercase letter. You can use special characters.</string>
    <string name="email_address">Email address</string>
    <string name="see_criteria_below">See criteria below</string>
    <string name="create_password">Create password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="next_btn">Next Btn</string>
    <string name="next">Next</string>
</resources>